change passport link with address

--- a/Diplom_alina/test/fixtures/photos.yml
+++ b/Diplom_alina/test/fixtures/photos.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  belong_to: 
+  path: MyString
 
 two:
-  belong_to: 
+  path: MyString
