in show create change list. fixbugs, add fancybox

--- a/Diplom_alina/Gemfile
+++ b/Diplom_alina/Gemfile
@@ -44,3 +44,4 @@ gem 'paperclip'
 gem 'bootstrap-sass'
 gem 'bootstrap-datepicker-rails'
 gem "font-awesome-rails", '~>4.5.0'
+gem 'fancybox2-rails', '~> 0.2.8'
